Don't run lint in prepare (run lint as separate CI step)

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "start": "node index.js",
   "dev": "nodemon index.js",
   "test": "jest --runInBand",
-  "lint": "eslint .",
-  "prepare": "npm run lint"
+  "lint": "eslint ."
 }
 
 
