--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "simple-node-ci",
   "version": "1.0.0",
   "main": "index.js",
@@ -25,4 +26,5 @@
     "test": "jest --runInBand",
     "lint": "eslint ."
   }
+  
 }
