--- a/package.json
+++ b/package.json
@@ -20,11 +20,9 @@
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4"
   },
+
   "scripts": {
-    "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest --runInBand",
-    "lint": "eslint ."
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   }
-  
 }
