--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+     "lint": "eslint ."
   }
 }
