--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4"
   },
-
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-     "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   }
 }
